--- a/app/assets/javascripts/templates/activities/questions_answers.hbs
+++ b/app/assets/javascripts/templates/activities/questions_answers.hbs
@@ -1,4 +1,5 @@
 {{#view Oli.QuestionsAnswersView}}
+
   <div class="description-box oli-text">
       {{controller.controllers.activities.description}}
   </div>
@@ -6,9 +7,9 @@
     {{controller.comp.content.title}}
   </div>
 
-  {{textarea class="answer-box-large"
+  {{textarea 
+    classBinding=":answer-box-large box1Error:box__input--error"
     value=input
-
   }}
 
 {{/view}}
