--- a/app/assets/javascripts/templates/activities/questions_values.hbs
+++ b/app/assets/javascripts/templates/activities/questions_values.hbs
@@ -11,7 +11,7 @@
     {{controller.dependentEntry.content.post}}
   </div>
 
-  {{textarea class="qa-values-box" id="values-box" placeholder="Begin listing your values here"
+  {{textarea classBinding=":qa-values-box :box box1Error:box__input--error" id="values-box" placeholder="Begin listing your values here"
   valueBinding="controller.input"
   }}
 
