--- a/app/assets/javascripts/templates/activities/share_1.hbs.erb
+++ b/app/assets/javascripts/templates/activities/share_1.hbs.erb
@@ -6,7 +6,7 @@
 
   <div class="oli-text">Let the world know about your progress.</div>
   {{textarea 
-    class="share-1-box" 
+    classBinding=":share-1-box box1Error:box__input--error" 
     value=fb_message
     placeholder="Enter your share message!"
   }}
