--- a/app/assets/javascripts/templates/activities/brainstorm.hbs
+++ b/app/assets/javascripts/templates/activities/brainstorm.hbs
@@ -12,7 +12,9 @@
             {{controller.component1.content.content}}
            </div> {{!-- </col-xs-3>  --}}
           <div class="col-xs-8">
-            {{input class="oli-form-field-long no-margin full-width"
+            {{view Oli.BrainstormInputView 
+            errorClass=item.class
+            index=_view.contentIndex 
             placeholder="Write Task"
             value=item.text}}
           </div>{{!-- </col-xs-8>  --}}
@@ -25,6 +27,7 @@
           </div> {{!-- </col-xs-3>  --}}
           <div class="col-xs-8">
             {{view Oli.BrainstormSelectView
+            c=controller
             item=item
             multiple="true"    
             class="thread-dropdown"
