--- a/app/assets/javascripts/templates/components/video-player.hbs
+++ b/app/assets/javascripts/templates/components/video-player.hbs
@@ -1,5 +1,24 @@
 <div class="video-container">
-  <video id="my_video"
+
+  <iframe 
+  id="vimeoplayer"
+  {{bind-attr 
+    src=source
+    width=width
+    height=height
+    frameborder="0" 
+
+    
+  }}
+  webkitallowfullscreen 
+  mozallowfullscreen 
+  allowfullscreen
+  >
+  
+  </iframe>
+
+
+  {{!-- <video id="my_video"
     {{bind-attr class=":video-js :vjs-default-skin :vjs-big-play-centered hideButton:hide-button"
 
     width=width
@@ -11,5 +30,5 @@
 
       <source id="my_source" {{bind-attr src=source.content}} type="video/mp4">
      <p class="vjs-no-js">Tunboundo view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-    </video>
+    </video> --}}
 </div>
