--- a/app/assets/stylesheets/oli-base.css.scss
+++ b/app/assets/stylesheets/oli-base.css.scss
@@ -51,9 +51,7 @@ body {
 }
 
 .oli-inactive{
-  background-color: oli-dark-gray(1);
-  box-shadow: 0 1px 3px oli-dark-gray(.3); 
-
+  @include inactive;
 }
 
 .oli-selector{
