--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -1,12 +1,11 @@
 
  <%= render :partial => '/shared/oli_landing', :locals => {
 
-  :heading => 'NEW ONLINE COURSE NOW IN BETA', 
-  :subtext => ' Discover and share what you 
-    truly want and what you have to offer
-      to build a career and life you love.',
-  :footer => 'Sign up now to beta test the OLI course!',
+  :heading => 'CONFUSED, OVERWHELMED AND UNFULFILLED?', 
+  :subtext => 'This proven, step-by-step self-discovery process will help you gain clarity, confidence and connections to create a career and life you love.',
+  :footer => 'Sign up now to beta test OLI\'s interactive online coaching program.',
   :landing_form_partial => 'landing_form',
   :button_text => "Submit"
 
 } %>
+
