--- a/app/views/shared/_oli_landing.html.erb
+++ b/app/views/shared/_oli_landing.html.erb
@@ -1,14 +1,11 @@
- <div class="wrapper-oli">
-    <div class="logo-wrapper">
-      <div class="logo-oli"><%= image_tag "oli-no-flame.png" %></div>
-      <div class="logo-flame"><%= image_tag "flame.png" %></div>
-
-    </div>
-
-  <div class="header-text-oli">
-   <%=heading%>
+<div class="wrapper-oli">
+  <div class="logo-wrapper">
+    <div class="logo-oli"><%= image_tag "oli-no-flame.png" %></div>
+    <div class="logo-flame"><%= image_tag "flame.png" %></div>
   </div>
-
+  <div class="header-text-oli">
+    <%=heading%>
+  </div>
   <div class="info-oli">
     <div class="body-text-oli text-content-oli">
       <%= subtext %>
@@ -17,13 +14,10 @@
       <%= footer %>
     </div>
     <%= render :partial => landing_form_partial%>
-   
-  </div> <!-- /info -->
-
-    <div class="push-oli"></div>
+  </div>
+  <!-- /info -->
+  <div class="push-oli"></div>
 </div>
-
 <div class="footer-oli">
   <div class="flames"></div>
-
 </div>
