enabled free videos and fixed some other videos

--- a/app/assets/javascripts/templates/free_video.hbs
+++ b/app/assets/javascripts/templates/free_video.hbs
@@ -9,7 +9,7 @@
     {{#view Oli.VideoView autoplay=true preload=true}}
     {{video-player width=controller.width 
     height=controller.height
-    source=controller.source
+    source=controller.source.content
     controls=true}}
     <div class="transcript">
       {{{controller.transcript.content.content}}}
