updated form types

--- a/app/views/oli/_landing_form.html.erb
+++ b/app/views/oli/_landing_form.html.erb
@@ -5,7 +5,7 @@
 
   <%= f.text_field :name, autofocus: true, :class => "submit-field-name-oli", :placeholder => "Name"%>
 
-  <%= f.email_field :email, :type => "email" :class => "submit-field-name-oli", :placeholder => "Email"  %>
+  <%= f.email_field :email, :type => "email", :class => "submit-field-name-oli", :placeholder => "Email" %>
 
     <%= f.password_field :password, autocomplete: "off", :class => "submit-field-oli", :placeholder => "Password", :type => "password"  %>
 
