updated form types

--- a/app/views/oli/_landing_form.html.erb
+++ b/app/views/oli/_landing_form.html.erb
@@ -3,11 +3,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <%= f.text_field :name, autofocus: true, :class => "submit-field-name-oli", :placeholder => "Name"%>
+  <%= f.text_field :name, autofocus: true, :class => "submit-field-name-oli", :placeholder => "Name", :autocomplete => :off %>
 
-  <%= f.email_field :email, :type => "email", :class => "submit-field-name-oli", :placeholder => "Email" %>
+  <%= f.email_field :email, :type => "email", :class => "submit-field-name-oli", :placeholder => "Email", :autocomplete => :off  %>
 
-    <%= f.password_field :password, autocomplete: "off", :class => "submit-field-oli", :placeholder => "Password", :type => "password"  %>
+    <%= f.password_field :password, autocomplete: "off", :class => "submit-field-oli", :placeholder => "Password", :autocomplete => :off, :type => "password"  %>
 
   <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label"><%= "Submit" %></span></button>
   <div class="signed-in-oli oli-text oli-small signed-in-oli">Already registered? <%= link_to  "Sign in", new_user_session_path %> </div>
