implemented new landing page

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,3 +1,6 @@
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(http://fonts.googleapis.com/css?family=Lato:100,400);
+
 @font-face
 {
 font-family: pn-bold;
@@ -13,7 +16,7 @@ src: font-url('proxima_nova_scosf_semibold.otf');
 @font-face
 {
 font-family: pn-thin;
-src: font-url('proxima_nova_thin.otf');
+src: font-url('proxima_nova_thin-lower.otf');
 }
 
 @font-face
