--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,8 @@
 
+<%= render 'layouts/landing_page_v2' %>
+
+
+<% if false %>
  <%= render :partial => '/shared/oli_landing', :locals => {
 
   :heading => 'CONFUSED, OVERWHELMED AND UNFULFILLED?', 
@@ -9,3 +13,5 @@
 
 } %>
   <%= render :partial=> 'modal' , :locals => {:id_val => "register-modal"}%>
+
+<% end %>
