--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@ addthisevent.settings({
 
   
 </head>
-<body>
+<body  data-spy="scroll" id="page-top" data-target=".navbar-fixed-top">
   <script>
 var error, fbAppId, obj;
 
