--- a/app/views/oli/_oli_landing.html.erb
+++ b/app/views/oli/_oli_landing.html.erb
@@ -17,7 +17,7 @@
       <%= footer %>
     </div>
     <%= render :partial => landing_form_partial, :locals => 
-    {:button_text => "TSET"}
+    {:button_text => "TEST"}
  %>
    
   </div> <!-- /info -->
