fixed typo on landing page

--- a/app/views/landing/_top.html.erb
+++ b/app/views/landing/_top.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div class="lnd__intro-text lnd__intro-text--upper-1 lnd__intro-text--shadow">
-    BRILIANCE
+    BRILLIANCE
   </div>
 
   <div class="lnd__intro-text lnd__intro-text--reg-1 lnd__intro-text--shadow">
