fixed login and resistration issues

--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -145,6 +145,7 @@ body, html {
     @include oli-font;
     // font-family: pn-light;
     text-align: center;
+    color: oli-red(1);
     // font-weight: normal;
     font-smoothing: antialiased;
     opacity: .6;
