--- a/app/views/landing/_sign_in_form.html.erb
+++ b/app/views/landing/_sign_in_form.html.erb
@@ -1,7 +1,7 @@
-<div class="oli-form">
-  <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+<div class="oli-form js-login-form">
+  <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:class => "js-landing-log-in"}) do |f| %>
     <div>
-    <%= f.email_field  :email, autofocus: true, :class => "submit-field-name-oli", :type => "email", :placeholder => "Email" %></div>
+    <%= f.email_field  :email, autofocus: false, :class => "submit-field-name-oli", :type => "email", :placeholder => "Email" %></div>
 
     <div>
       <%= f.password_field :password, autocomplete: "off",  :class => "submit-field-oli",  :type => "password",  :placeholder => "Password" %></div>
