--- a/app/views/landing/_about.html.erb
+++ b/app/views/landing/_about.html.erb
@@ -1,1 +1,23 @@
-ABOUT SECTION
+<div class="lnd__section-sub">
+  <div class="container">
+    <div class="row-centered container">
+      <div class="col-sm-6 center-block">
+        <div class="oli__text oli__text--white">
+          <div class="oli__text--title lnd__title">
+            WHAT IS OLI?
+          </div>
+
+          <div class="oli__text--body oli-pn-light">
+            OLI Interactive is an online personal development coaching platform.  We're the Codecademy for personal development.  Ultimately, OLI Interactive will be a platform for other related coaches to leverage with their audiences as well.
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6 center-block about__mac">
+        <div class="about__mac-screen">
+          <%= image_tag "oli_screen1.png" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
