--- a/app/views/landing/_features.html.erb
+++ b/app/views/landing/_features.html.erb
@@ -1,1 +1,57 @@
-FEATURES SECTION
+<div class="lnd__section-sub">
+  <div class="oli__text center">
+          <div class="oli__text--title lnd__title oli-arial">
+        FEATURES
+          </div>
+
+          <div class="oli__text--body oli-pn-light">
+           We envision a world in which every individual is confidently shining their unique light in the world; inspired by themselves; fulfilled by the work they do; and spreading that joy to those around them. We envision a world in which education is transformed such that it makes a real difference in people's lives.
+           OLI Interactive is how WE are bringing this vision to life!
+          </div>
+        </div>
+
+  <div class="feature__items">
+    <div class="row  row-centered">
+      <div class="col-sm-5  col-centered center-block feature__item feature_item--pull-up">
+        <%= image_tag "illustration_video.png" %>
+      </div>
+
+      <div class="col-sm-5 col-centered center-block feature__item oli__text--body oli-pn-light">
+        <div class="feature__item-title oli-arial">
+          Instructional Videos & Interactive Exercises
+        </div>
+        Gather the tools you need to live a fulfilling life with dozens of career coaching videos, and then Identify your values and passions through fun and creative workshops.
+      </div>
+    </div>
+
+    <div class="row  row-centered">
+      <div class="col-sm-5 col-centered center-block feature__item oli__text--body oli-pn-light">
+       <div class="feature__item-title oli-arial">
+        Daily Inspiration & Monthly Webinars
+       </div>
+       Login daily to receive your DailyOLI, an inspirational quote or thought-provoking exercise. Participate in community webinars that cover a multitude of career-building topics.
+      </div>
+
+      <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
+
+        <%= image_tag "illustration_desk.png" %>
+      </div>
+    </div>
+
+
+    <div class="row  row-centered">
+      <div class="col-sm-5 col-centered center-block feature__item feature_item--pull-up">
+        <%= image_tag "illustration_blank.png" %>
+      </div>
+
+      <div class="col-sm-5 col-centered center-block feature__item oli__text--body oli-pn-light">
+        <div class="feature__item-title oli-arial">
+          One-on-One Coaching*
+        </div>
+        Receive personalized career coaching with Ahalya Kumaran, host of AhalyaTV, PLUS a curated list of tools that help to foster your inner light, sent right to your inbox.
+        *Premium Membership Only
+      </div>
+    </div>
+  </div>
+
+</div>
