--- a/app/views/layouts/_landing_page_v2.html.erb
+++ b/app/views/layouts/_landing_page_v2.html.erb
@@ -38,14 +38,14 @@
           <a class="page-scroll" href="#about">About</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Features</a>
+          <a class="page-scroll" href="#features">Features</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Testimonials</a>
+          <a class="page-scroll" href="#testimonials">Testimonials</a>
         </li>
 
         <li>
-          <a class="page-scroll js-switch-to-login" href="#log-in">Log in</a>
+          <a class="page-s ycroll js-switch-to-login" href="#log-in">Log in</a>
         </li>
 
       </ul>
@@ -68,14 +68,17 @@
   </section>
 
   <section class="lnd__section lnd__about-container" id="about">
+    <span id="screen1-anchor"></span>
+    <span id="screen2-anchor"></span>
+    <span id="screen3-anchor"></span>
+ <!--  -->
     <%= render "/landing/about" %>
   </section>
-</div>
 <!-- About Section -->
 
 
 <!-- Services Section -->
-<section id="services" class="lnd__section">
+<section id="features" class="lnd__features-container lnd__section">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -86,7 +89,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="lnd__section">
+<section id="testimonials" class="lnd__section lnd__section--small">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
