--- a/app/assets/javascripts/oli-content.js.erb
+++ b/app/assets/javascripts/oli-content.js.erb
@@ -38,6 +38,7 @@ $(document).ready(function() {
     $("#screen1-anchor").waypoint(function(){
         $('.about__mac-screen img').attr("src","<%=image_path 'oli_screen1.png'%>");
         // alert("ANCHOR")
+        console.log("ANCHOR TRIGGERED")
     }, {offset: '75%'})
 
     $("#screen2-anchor").waypoint(function(){
