--- a/app/assets/javascripts/oli-content.js.erb
+++ b/app/assets/javascripts/oli-content.js.erb
@@ -1,4 +1,5 @@
 $(document).ready(function() {
+    console.log("content js triggered")
 
     // var swapToLogin = function(){
     //   $(".lnd__session").empty().
